--- a/src/index.css
+++ b/src/index.css
@@ -375,7 +375,7 @@ body {
 
 .checkbox-container .checkmark {
   position: absolute;
-  top: 0;
+  top: 2px;
   left: 0;
   height: 20px;
   width: 20px;
