--- a/src/index.css
+++ b/src/index.css
@@ -196,6 +196,10 @@ body {
   background-color: #f3f4f6;
 }
 
+.font-gray-600 {
+  color: #525861;
+}
+
 .font-gray-700 {
   color: #394150;
 }
@@ -363,6 +367,7 @@ body {
   padding-left: 30px;
   -webkit-user-select: none;
   user-select: none;
+  color: #394150;
 }
 
 .checkbox-container .label-checkbox input {
@@ -435,6 +440,14 @@ body {
 
 .opacity-90 {
   opacity: 0.9;
+}
+
+.text-capitalize {
+  text-transform: capitalize;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
 }
 
 /* globals */
